--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html class="full">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="../css/main.css">
 <title></title>
 </head>
-<body>
+<body class="full">
 	<div class="main-name"></div>
 	<!-- <div class="game-show">亮牌</div> -->
 	<input type="text" class="main-input" />
