css of main.html almost done

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -12,92 +12,92 @@
 <title>fishing</title>
 </head>
 <body class="full">
-<section class="main-box">
-	<div class="main-screen hide"></div>
+<section class="main-box">	
+	<ul class="main-broadcast">
+		<li class="text-ok">小男人加入了游戏</li>
+		<li class="text-danger">小男人离开了游戏</li>
+		<li class="">[聊天] 自大：快点哇！</li>
+		<li class="text-warn">轮到自大行动了！</li>
+	</ul>
+	<ul class="main-table">
+		<li class="main-player">
+			<div class="main-head">
+				<img src="../img/a460d33840506cb4ac272e710ac18402.jpg">
+			</div>
+			<div class="main-name">编程小能手</div>
+			<div class="main-score">212</div>
+			<div class="main-status">5</div>
+			<div class="main-hand">
+				<div class="main-card spade">A</div>
+				<div class="main-card heart">J</div>
+			</div>
+		</li>
+		<li class="main-player">
+			<div class="main-head">
+				<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
+			</div>
+			<div class="main-name">编程小能手</div>
+			<div class="main-score">12</div>
+			<div class="main-status">2</div>
+			<div class="main-hand">
+				<div class="main-card"></div>
+				<div class="main-card"></div>
+			</div>
+			<div class="main-timer">30</div>
+		</li>
+		<li class="main-player drop">
+			<div class="main-head">
+				<img src="../img/34885b34693c5cc18007faaf95dbf262.jpg">
+			</div>
+			<div class="main-name">test</div>
+			<div class="main-score">2</div>
+			<div class="main-status">0</div>
+			<div class="main-hand">
+				<div class="main-card"></div>
+				<div class="main-card"></div>
+			</div>
+		</li>
+		<li class="main-player quit">
+			<div class="main-head">
+				<img src="../img/55c6158fc90a93e3379f3383940c15c3.jpg">
+			</div>
+			<div class="main-name">编程小能手</div>
+			<div class="main-score">22</div>
+			<div class="main-status">1</div>
+			<div class="main-hand">
+				<div class="main-card"></div>
+				<div class="main-card"></div>
+			</div>
+		</li>
+		<li class="main-player">
+			<div class="main-head">
+				<img src="../img/33.jpg">
+			</div>
+			<div class="main-name">小男人</div>
+			<div class="main-score">82</div>
+			<div class="main-status">1</div>
+			<div class="main-hand">
+				<div class="main-card"></div>
+				<div class="main-card"></div>
+			</div>
+		</li>
+		<li class="main-player">
+			<div class="main-head">
+				<img src="../img/44.jpg">
+			</div>
+			<div class="main-name">自大</div>
+			<div class="main-score">102</div>
+			<div class="main-status">1</div>
+			<div class="main-hand">
+				<div class="main-card"></div>
+				<div class="main-card"></div>
+			</div>
+		</li>
+	</ul>
+	<div class="main-pool">16</div>
 	<ul class="main-fn">
 		<li class="main-menu"></li>
 		<li class="main-speak"></li>
-	</ul>	
-	<div class="main-table">
-		<ul class="main-seats">
-			<li class="main-player">
-				<div class="main-head">
-					<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
-				</div>
-				<div class="main-name">编程小能手</div>
-				<div class="main-score">22</div>
-				<div class="main-status">5</div>
-				<div class="main-cards">
-					<div class="main-card"></div>
-					<div class="main-card"></div>
-				</div>
-			</li>
-			<li class="main-player">
-				<div class="main-head">
-					<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
-				</div>
-				<div class="main-name">编程小能手</div>
-				<div class="main-score">22</div>
-				<div class="main-status">2</div>
-				<div class="main-cards">
-					<div class="main-card"></div>
-					<div class="main-card"></div>
-				</div>
-				<div class="main-timer">30</div>
-			</li>
-			<li class="main-player drop">
-				<div class="main-head">
-					<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
-				</div>
-				<div class="main-name">编程小能手</div>
-				<div class="main-score">22</div>
-				<div class="main-status">0</div>
-				<div class="main-cards">
-					<div class="main-card"></div>
-					<div class="main-card"></div>
-				</div>
-			</li>
-			<li class="main-player quit">
-				<div class="main-head">
-					<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
-				</div>
-				<div class="main-name">编程小能手</div>
-				<div class="main-score">22</div>
-				<div class="main-status">10</div>
-				<div class="main-cards">
-					<div class="main-card"></div>
-					<div class="main-card"></div>
-				</div>
-			</li>
-			<li class="main-player">
-				<div class="main-head">
-					<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
-				</div>
-				<div class="main-name">编程小能手</div>
-				<div class="main-score">22</div>
-				<div class="main-status">10</div>
-				<div class="main-cards">
-					<div class="main-card"></div>
-					<div class="main-card"></div>
-				</div>
-			</li>
-			<li class="main-player">
-				<div class="main-head">
-					<img src="../img/b3dedb27409a6a1208514fcc4c5a6061.jpg">
-				</div>
-				<div class="main-name">编程小能手</div>
-				<div class="main-score">22</div>
-				<div class="main-status">10</div>
-				<div class="main-cards">
-					<div class="main-card"></div>
-					<div class="main-card"></div>
-				</div>
-			</li>
-		</ul>
-	</div>
-	<ul class="main-hand">
-		<li class="main-card heart">A</li>
-		<li class="main-card spade">J</li>
 	</ul>
 	<ul class="main-wait">
 		<li>
@@ -108,7 +108,7 @@
 		</li>
 	</ul>
 	<ul class="main-ctrl">
-		<li class="main-begin">开始</li>
+		<!-- <li class="main-begin">开始</li> -->
 		<li class="main-confirm">确定</li>
 		<li class="main-drop">弃牌</li>
 		<li class="main-all-in">冲底</li>
