--- a/public/html/main.html
+++ b/public/html/main.html
@@ -28,8 +28,8 @@
 			<div class="main-score">212</div>
 			<div class="main-status">5</div>
 			<div class="main-hand">
-				<div class="main-card spade">A</div>
-				<div class="main-card heart">J</div>
+				<div class="main-card joker1">A</div>
+				<div class="main-card joker2">J</div>
 			</div>
 		</li>
 		<li class="main-player">
@@ -43,7 +43,6 @@
 				<div class="main-card"></div>
 				<div class="main-card"></div>
 			</div>
-			<div class="main-timer">30</div>
 		</li>
 		<li class="main-player drop">
 			<div class="main-head">
